modif des liens et images

--- a/genre_electro.html
+++ b/genre_electro.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Electro - Genre - Waffle Vibes Festival 2025</title>
+    <title>Electro Genre Waffle Vibes Festival 2025</title>
     <meta charset="utf-8"/>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <meta name="description" content="Découvrez le genre de musique Electro au Brussel Waffle Vibes Festival 2025">
+    <meta name="author" content="Marie Goossens - EPFC 2025">
     <link rel="stylesheet" href="assets/css/main.css"/>
     <noscript>
       <link rel="stylesheet" href="assets/css/noscript.css"></noscript>
@@ -25,11 +25,18 @@
 
 
      <!-- Menu -->
+     <nav>
+      <ul id="Fil_d_ariane">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="genres.html">Genres</a></li>
+        <li><a href="genre_electro.html">Electro</a></li>
+      </ul>
+    </nav>
      <nav id="menu">
       <ul class="links">
         <li><a href="index.html">Accueil</a></li>
         <li><a href="line-up.html">Line-up</a></li>
-        <li><a href="genre.html">Genre</a></li>
+        <li><a href="genres.html">Genre</a></li>
         <li><a href="ticket.html">Tickets</a></li>
         <li><a href="contact.html">Nous contacter</a></li>
       </ul>
@@ -114,21 +121,22 @@
         </section>
 
         <!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="https://x.com" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://facebook.com" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://instagram.com" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://tiktok.com" class="icon brands alt fa-tiktok"><span class="label">Tiktok</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; wafflemusicfestival</li>
-								<li><a href="mentions_legales.html">Mentions légales</a></li>
-								<li><a href="contact.html">Nous contactez</a></li>
-							</ul>
-						</div>
-					</footer>
+        <footer id="footer">
+          <div class="inner">
+            <ul class="icons">
+              <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+              <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+              <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+              <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+              <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+            </ul>
+            <ul class="copyright">
+              <li>&copy; wafflemusicfestival</li>
+              <li><a href="mentions_legales.html">Mentions légales</a></li>
+              <li><a href="contact.html">Nous contactez</a></li>
+              </ul>
+          </div>
+        </footer>
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
