--- a/Artiste_charlotte.html
+++ b/Artiste_charlotte.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Blaze - Waffle Vibes Festival 2025</title>
+    <title>Charlotte de Witte Waffle Vibes Festival 2025</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <meta name="description" content="Découvrez Charlotte de Witte au Brussel Waffle Vibes Festival 2025">
+    <meta name="author" content="Marie Goossens - EPFC 2025">
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript>
-      <link rel="stylesheet" href="assets/css/noscript css" />
+      <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
   </head>
 
@@ -24,11 +26,19 @@
       </header>
 
       <!-- Menu -->
+      <nav>
+        <ul id="Fil_d_ariane">
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="genres.html">Genres</a></li>
+          <li><a href="genre_electro.html">Electro</a></li>
+          <li>Charlotte de Witte</li>
+        </ul>
+      </nav>
       <nav id="menu">
         <ul class="links">
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="line-up.html">Line up</a></li>
-          <li><a href="genre.html">Genre</a></li>
+          <li><a href="line-up.html">Line-up</a></li>
+          <li><a href="genres.html">Genre</a></li>
           <li><a href="ticket.html">Tickets</a></li>
           <li><a href="contact.html">Nous contacter</a></li>
         </ul>
@@ -40,55 +50,50 @@
         <section id="one">
           <div class="inner">
             <header class="major">
-              <h1>The Blaze</h1>
+              <h1>Charlotte de Witte</h1>
             </header>
             <div class="inner">
               <ul class="icons">
                 <li>
-                  <a href="https://twitter.com/theblazeprod" class="icon brands alt fa-twitter"
+                  <a href="https://twitter.com/CharlottedWitte" class="icon brands alt fa-twitter"
                     ><span class="label">Twitter</span></a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://www.facebook.com/theblazeprod/"
+                    href="https://www.facebook.com/charlottedewittemusic/"
                     class="icon brands alt fa-facebook-f"
                     ><span class="label">Facebook</span></a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://www.instagram.com/theblazeprod/"
+                    href="https://www.instagram.com/charlottedewittemusic/"
                     class="icon brands alt fa-instagram"
                     ><span class="label">Instagram</span></a
-                  >
-                </li>
-                <li>
-                  <a href="https://open.spotify.com/artist/5Nf8kbo5JhDHFgB8Pfi9lV" class="icon brands alt fa-spotify"
-                    ><span class="label">Spotify</span></a
                   >
                 </li>
               </ul>
             </div>
             <span class="image main">
-              <img src="images/the_blaze.jpg" alt="Photo de The blaze" />
+              <img src="images/dewitte.jpg" alt="Photo de Charlotte de Witte" />
             </span>
             <p></p>
             <section class="artist-info">
-              <p>The Blaze est un duo électro français composé de Guillaume et Jonathan Alric, originaires de Paris. Révélés en 2016 avec le titre Virile, ils se distinguent par une fusion unique entre musique électronique, storytelling visuel et émotions profondes. Leur musique, à la fois planante et puissante, s’accompagne toujours de clips cinématographiques réalisés par leurs soins. Leurs lives sont de véritables expériences immersives — une alchimie rare à découvrir à Bruxelles lors du Waffle Vibes Festival.</p>
+              <p>Originaire de Gand, en Belgique, Charlotte de Witte est née le 21 juillet 1992. DJ et productrice incontournable de la scène techno internationale, elle s’est imposée par ses sets sombres, puissants et sans compromis. Reconnue pour son approche minimaliste et intense, elle a fondé son propre label, KNTXT, et se produit aux quatre coins du globe. Pour le Waffle Vibes Festival, elle revient jouer à la maison — une performance attendue avec impatience.</p>
             </section>
 
             <!-- Vidéo de l'artiste -->
             <iframe
-            width="940"
-            height="529"
-            src="https://www.youtube.com/embed/UoDJvF1TYuY"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          ></iframe>
+              width="940"
+              height="529"
+              src="https://www.youtube.com/embed/0YVvcTIGy40"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
           </div>
         </section>
       </div>
@@ -97,36 +102,17 @@
       <footer id="footer">
         <div class="inner">
           <ul class="icons">
-            <li>
-              <a href="https://x.com" class="icon brands alt fa-twitter"
-                ><span class="label">Twitter</span></a
-              >
-            </li>
-            <li>
-              <a
-                href="https://facebook.com"
-                class="icon brands alt fa-facebook-f"
-                ><span class="label">Facebook</span></a
-              >
-            </li>
-            <li>
-              <a
-                href="https://instagram.com"
-                class="icon brands alt fa-instagram"
-                ><span class="label">Instagram</span></a
-              >
-            </li>
-            <li>
-              <a href="https://tiktok.com" class="icon brands alt fa-tiktok"
-                ><span class="label">Tiktok</span></a
-              >
-            </li>
+            <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+            <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+            <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
           </ul>
           <ul class="copyright">
             <li>&copy; wafflemusicfestival</li>
             <li><a href="mentions_legales.html">Mentions légales</a></li>
             <li><a href="contact.html">Nous contactez</a></li>
-          </ul>
+            </ul>
         </div>
       </footer>
     </div>
