--- a/Artiste_peggy.html
+++ b/Artiste_peggy.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Charlotte de Witte - Waffle Vibes Festival 2025</title>
+    <title>Peggy Gou Waffle Vibes Festival 2025</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
+    <meta name="viewport"content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <meta name="description" content="Découvrez l'artiste Peggy Gou au Brussel Waffle Vibes Festival 2025">
+    <meta name="author" content="Marie Goossens - EPFC 2025">
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript>
       <link rel="stylesheet" href="assets/css/noscript.css" />
@@ -27,11 +26,19 @@
       </header>
 
       <!-- Menu -->
+      <nav>
+        <ul id="Fil_d_ariane">
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="genres.html">Genres</a></li>
+          <li><a href="genre_electro.html">Electro</a></li>
+          <li>Peggy Gou</li>
+        </ul>
+      </nav>
       <nav id="menu">
         <ul class="links">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="line-up.html">Line up</a></li>
-          <li><a href="genre.html">Genre</a></li>
+          <li><a href="genres.html">Genre</a></li>
           <li><a href="ticket.html">Tickets</a></li>
           <li><a href="contact.html">Nous contacter</a></li>
         </ul>
@@ -43,50 +50,56 @@
         <section id="one">
           <div class="inner">
             <header class="major">
-              <h1>Charlotte de Witte</h1>
+              <h1>Peggy Gou</h1>
             </header>
             <div class="inner">
               <ul class="icons">
                 <li>
-                  <a href="https://twitter.com/CharlottedWitte" class="icon brands alt fa-twitter"
+                  <a href="https://twitter.com/peggygou_" class="icon brands alt fa-twitter"
                     ><span class="label">Twitter</span></a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://www.facebook.com/charlottedewittemusic/"
+                    href="https://www.facebook.com/PeggyGou/"
                     class="icon brands alt fa-facebook-f"
                     ><span class="label">Facebook</span></a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://www.instagram.com/charlottedewittemusic/"
+                    href="https://www.instagram.com/peggygou_/"
                     class="icon brands alt fa-instagram"
                     ><span class="label">Instagram</span></a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.tiktok.com/@peggygou" class="icon brands alt fa-tiktok"
+                    ><span class="label">Tiktok</span></a
                   >
                 </li>
               </ul>
             </div>
             <span class="image main">
-              <img src="images/dewitte.jpg" alt="Photo de Charlotte de Witte" />
+              <img src="images/peggy.jpg" alt="Photo de Peggy Gou" />
             </span>
             <p></p>
             <section class="artist-info">
-              <p>Originaire de Gand, en Belgique, Charlotte de Witte est née le 21 juillet 1992. DJ et productrice incontournable de la scène techno internationale, elle s’est imposée par ses sets sombres, puissants et sans compromis. Reconnue pour son approche minimaliste et intense, elle a fondé son propre label, KNTXT, et se produit aux quatre coins du globe. Pour le Waffle Vibes Festival, elle revient jouer à la maison — une performance attendue avec impatience.</p>
+              <p>Née à Incheon, en Corée du Sud, le 3 juillet 1991, Peggy Gou est aujourd’hui l’une des figures les plus en vue de la scène électro mondiale. Installée à Berlin, elle mélange avec brio house, techno et influences rétro, créant un style immédiatement reconnaissable. DJ, productrice, et icône de mode, elle se produit dans les plus grands festivals et clubs à travers le monde. Son énergie magnétique et son sens du groove feront vibrer le Brussels Waffle Festival.</p>
             </section>
 
             <!-- Vidéo de l'artiste -->
             <iframe
               width="940"
               height="529"
-              src="https://www.youtube.com/embed/0YVvcTIGy40"
+              src="https://www.youtube.com/embed/dDx4j1Hq9g"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin"
               allowfullscreen
             ></iframe>
+
           </div>
         </section>
       </div>
@@ -95,36 +108,17 @@
       <footer id="footer">
         <div class="inner">
           <ul class="icons">
-            <li>
-              <a href="https://x.com" class="icon brands alt fa-twitter"
-                ><span class="label">Twitter</span></a
-              >
-            </li>
-            <li>
-              <a
-                href="https://facebook.com"
-                class="icon brands alt fa-facebook-f"
-                ><span class="label">Facebook</span></a
-              >
-            </li>
-            <li>
-              <a
-                href="https://instagram.com"
-                class="icon brands alt fa-instagram"
-                ><span class="label">Instagram</span></a
-              >
-            </li>
-            <li>
-              <a href="https://tiktok.com" class="icon brands alt fa-tiktok"
-                ><span class="label">Tiktok</span></a
-              >
-            </li>
+            <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+            <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+            <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
           </ul>
           <ul class="copyright">
             <li>&copy; wafflemusicfestival</li>
             <li><a href="mentions_legales.html">Mentions légales</a></li>
             <li><a href="contact.html">Nous contactez</a></li>
-          </ul>
+            </ul>
         </div>
       </footer>
     </div>
